--- a/trade-financing.html
+++ b/trade-financing.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="keywords" content="川商贷">
         <meta http-equiv="description" content="川商贷">
-        <title>我要借款-金仓贷</title>
+        <title>我要融资-金仓贷</title>
 
         <link href="css/public.css" type="text/css" rel="stylesheet" />
         <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -32,10 +32,10 @@
                 <a href="index.html" class="logo"><img src="images/logo.png" /></a>
                 <ul class="nav">
                     <li>
-                        <a href="index.html" class="c900">首页</a>
+                        <a href="index.html">首页</a>
                     </li>
                     <li>
-                        <a href="loan.html">我要借款</a>
+                        <a href="loan.html" class="c900">我要融资</a>
                     </li>
                     <li class="sub">
                         <a href="#">我要投资</a>
