--- a/account-fund-in.html
+++ b/account-fund-in.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="keywords" content="川商贷">
         <meta http-equiv="description" content="川商贷">
-        <title>投资查询-金仓贷</title>
+        <title>融资项目还款-金仓贷</title>
 
         <link href="css/public.css" type="text/css" rel="stylesheet" />
         <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -101,74 +101,68 @@
 
             <div id="right" class="bor">
                 <div class="p40 pt20">
+                    <h2 class="title"><span>融资项目还款</span></h2>
+                    <div class="tac bgf8 lh36 borb2">
 
-                    <ul class="tradetab">
-                        <li class="act"><a href="#">投资记录</a></li>
-                    </ul>
-
-                    <div class="tradecon">
-
-                        <div class="clearfix pt20 pb20 borb2">
-                            <div class="fl lh20  mr20"><label class="fl">起止日期：</label>		
-                                <input name="BeginDates" id="BeginDates" type="text" value="" size="20" dateformatstring="yyyy-MM-dd" autocomplete="off" onfocus="new Calendar().show(this);">
-                                -
-                                <input name="EndDates" id="EndDates" type="text" value="" size="20" dateformatstring="yyyy-MM-dd" autocomplete="off" onfocus="new Calendar().show(this);">
-                            </div>
-                            <div class="fl lh20 query_time">
-                                <dl><dt></dt><dd>
-                                    <a key="1" name="term">今天</a>
-                                    <a key="2" name="term">最近七天</a>
-                                    <a key="3" name="term">1个月</a>
-                                    <a key="4" name="term">3个月</a>
-                                    <a key="5" name="term">1年</a>
-                                    </dd></dl>
-                            </div>
-                            <div class="fl lh20  mr20"><br><br></div>
-                            <div class="fl lh20  mr20"><label>金额范围：</label><input name="amountBegin" type="text" value="" size="20">
-                                -
-                                <input name="amountEnd" type="text" value="" size="20"> 元</div>
-                            <a class="png btn fl mr20" href="#" onclick="doIt()"><span class="png">查询</span></a>
-                        </div>
-                        <div class="row state mt20 mb5">
-                            <div class="col-xs-9">
-                                <div class="row">
-                                    <div class="col-xs-2">交易状态：</div>
-                                    <div class="col-xs-10">
-                                        <a key="" name="status" class="on">所有投资</a>
-                                        <a key="1" name="status">待成立投资</a>
-                                        <a key="2" name="status">未到期投资</a>
-                                        <a key="3" name="status">正常收款的投资</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="tac bgf8 lh36 borb2">
-
-                        </div><table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab2 mt5">
-                        <tbody><tr>
-                            <th class="pl15">项目编号</th>
-                            <th>项目名称</th>
-                            <th>借款金额</th>
-                            <th>投资金额</th>
-                            <th>投资时间</th>
-
-                            <th></th>
-                            </tr>
-
-
-                        </tbody></table>
-
-                        <div class="tabpages mt10 tar c999">
-                            <input type="hidden" name="_viewReferer" value="p/account/transqry/PInvestmentRecordPre">    	
-                            <span>当前第0页&nbsp;共0页&nbsp;0条记录</span>
-                            <a href="####" disabled="">首页</a> &nbsp;
-                            <a href="####" disabled="">上一页</a> &nbsp; 
-                            <a href="####" disabled="">下一页</a> &nbsp;
-                            <a href="####" disabled="">尾页</a> &nbsp; 	  	
-                        </div>
                     </div>
-                    <div style="color:#F00"><span id="EEE"></span></div>
+                    <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab2 mt5 max100 lhn">
+                        <tbody>
+                            <tr>
+                                <th width="10%">项目编号</th>
+                                <th width="20%">项目名称</th>
+                                <th width="10%">借款金额</th>
+                                <th width="10%">借款期限</th>
+                                <th width="10%">借款利率</th>
+                                <th width="15%">到期时间</th>
+                                <th width="10%">状态</th>
+                            </tr>
+                            <tr>
+                                <td>201501120001</td>
+                                <td>买房！买房！买房！</td>
+                                <td>20,000.00</td>
+                                <td>一年</td>
+                                <td>5%</td>
+                                <td>2016-01-01</td>
+                                <td>已还款</td>
+                            </tr><tr>
+                                <td>201501120001</td>
+                                <td>买房！买房！买房！</td>
+                                <td>20,000.00</td>
+                                <td>一年</td>
+                                <td>5%</td>
+                                <td>2016-01-01</td>
+                                <td>已还款</td>
+                            </tr><tr>
+                                <td>201501120001</td>
+                                <td>买房！买房！买房！</td>
+                                <td>20,000.00</td>
+                                <td>一年</td>
+                                <td>5%</td>
+                                <td>2016-01-01</td>
+                                <td>已还款</td>
+                            </tr><tr>
+                                <td>201501120001</td>
+                                <td>买房！买房！买房！</td>
+                                <td>20,000.00</td>
+                                <td>一年</td>
+                                <td>5%</td>
+                                <td>2016-01-01</td>
+                                <td>已还款</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="tabpages mt10 tar c999">
+                        <input type="hidden" name="_viewReferer" value="p/finance/financingRepaymentQueryList">    
+                        <span>当前第1页&nbsp;共0页&nbsp;0条记录</span>
+
+                        <a href="####" disabled="">首页</a> &nbsp;
+                        <a href="####" disabled="">上一页</a> &nbsp; 
+                        <a href="####" disabled="">下一页</a> &nbsp;
+                        <a href="####" disabled="">尾页</a> &nbsp;
+                    </div>
+                    <div class="errors">            
+                        <span id="EEE"></span>
+                    </div>
                 </div>
             </div>
 
