--- a/account-trade-info.html
+++ b/account-trade-info.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="keywords" content="川商贷">
         <meta http-equiv="description" content="川商贷">
-        <title>投资查询-金仓贷</title>
+        <title>交易查询-金仓贷</title>
 
         <link href="css/public.css" type="text/css" rel="stylesheet" />
         <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -80,10 +80,10 @@
                         </ol>
                     </li>
                     <li>
-                        <a href="account-invest.html" class="c900">投资查询</a><i class="png"></i>
+                        <a href="account-invest.html">投资查询</a><i class="png"></i>
                         <ol class="pb20 pt5">
                             <li><a href="account-income-info.html">收益查询</a></li>
-                            <li><a href="account-trade-info.html">交易查询</a></li>
+                            <li><a href="account-trade-info.html" class="c900">交易查询</a></li>
                         </ol>
                     </li>
                     <li>
@@ -109,7 +109,7 @@
                     <div class="tradecon">
 
                         <div class="clearfix pt20 pb20 borb2">
-                            <div class="fl lh20  mr20"><label class="fl">起止日期：</label>		
+                            <div class="fl lh20  mr20"><label class="fl">起止日期：</label>      
                                 <input name="BeginDates" id="BeginDates" type="text" value="" size="20" dateformatstring="yyyy-MM-dd" autocomplete="off" onfocus="new Calendar().show(this);">
                                 -
                                 <input name="EndDates" id="EndDates" type="text" value="" size="20" dateformatstring="yyyy-MM-dd" autocomplete="off" onfocus="new Calendar().show(this);">
@@ -129,6 +129,7 @@
                                 <input name="amountEnd" type="text" value="" size="20"> 元</div>
                             <a class="png btn fl mr20" href="#" onclick="doIt()"><span class="png">查询</span></a>
                         </div>
+
                         <div class="row state mt20 mb5">
                             <div class="col-xs-9">
                                 <div class="row">
@@ -153,19 +154,81 @@
                             <th>投资金额</th>
                             <th>投资时间</th>
 
+                            <th>投资状态</th>
+
                             <th></th>
+                            </tr>
+
+                            <tr class="trValue">
+                                <td nowrap="" class="tdValue">201501050001</td>
+                                <td nowrap="" class="tdValue">购车02</td>
+                                <td nowrap="" class="tdValue">10,000.00</td>
+                                <td nowrap="" class="tdValue">5,000.00</td>
+                                <td nowrap="" class="tdValue">2015-01-05 14:34:22</td>
+
+                                <td nowrap="" class="tdValue">处理失败</td>
+
+
+                            </tr>
+
+                            <tr class="trValue">
+                                <td nowrap="" class="tdValue">201501050001</td>
+                                <td nowrap="" class="tdValue">购车02</td>
+                                <td nowrap="" class="tdValue">10,000.00</td>
+                                <td nowrap="" class="tdValue">5,000.00</td>
+                                <td nowrap="" class="tdValue">2015-01-05 11:47:49</td>
+
+                                <td nowrap="" class="tdValue">已处理</td>
+
+
+                            </tr>
+
+                            <tr class="trValue">
+                                <td nowrap="" class="tdValue">201501050001</td>
+                                <td nowrap="" class="tdValue">购车02</td>
+                                <td nowrap="" class="tdValue">10,000.00</td>
+                                <td nowrap="" class="tdValue">5,000.00</td>
+                                <td nowrap="" class="tdValue">2015-01-05 11:23:47</td>
+
+                                <td nowrap="" class="tdValue">已处理</td>
+
+
+                            </tr>
+
+                            <tr class="trValue">
+                                <td nowrap="" class="tdValue">201501040002</td>
+                                <td nowrap="" class="tdValue">买车贷款</td>
+                                <td nowrap="" class="tdValue">20,000.00</td>
+                                <td nowrap="" class="tdValue">20,000.00</td>
+                                <td nowrap="" class="tdValue">2015-01-04 16:54:09</td>
+
+                                <td nowrap="" class="tdValue">处理失败</td>
+
+
+                            </tr>
+
+                            <tr class="trValue">
+                                <td nowrap="" class="tdValue">201501040002</td>
+                                <td nowrap="" class="tdValue">买车贷款</td>
+                                <td nowrap="" class="tdValue">20,000.00</td>
+                                <td nowrap="" class="tdValue">20,000.00</td>
+                                <td nowrap="" class="tdValue">2015-01-04 16:20:06</td>
+
+                                <td nowrap="" class="tdValue">已处理</td>
+
+
                             </tr>
 
 
                         </tbody></table>
 
                         <div class="tabpages mt10 tar c999">
-                            <input type="hidden" name="_viewReferer" value="p/account/transqry/PInvestmentRecordPre">    	
-                            <span>当前第0页&nbsp;共0页&nbsp;0条记录</span>
+                            <input type="hidden" name="_viewReferer" value="p/account/transqry/PInvestmentRecordPre">     
+                            <span>当前第1页&nbsp;共1页&nbsp;5条记录</span>
                             <a href="####" disabled="">首页</a> &nbsp;
                             <a href="####" disabled="">上一页</a> &nbsp; 
                             <a href="####" disabled="">下一页</a> &nbsp;
-                            <a href="####" disabled="">尾页</a> &nbsp; 	  	
+                            <a href="####" disabled="">尾页</a> &nbsp;        
                         </div>
                     </div>
                     <div style="color:#F00"><span id="EEE"></span></div>
@@ -180,7 +243,7 @@
         <div class="footer">
             <div style="width:1000px; margin:0 auto">
                 <div style="width:80%" class="tal fl">
-                    <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商融资担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
+                    <dl class="friends clearfix"><dt>友情链接</dt><dd><a href="#">华夏川商借款担保</a><a href="#">华夏川商建设</a><a href="#">华夏川商联合投资控股</a></dd></dl>
                 </div>
                 <div style="width:20%" class="tar fl">
                     <img src="images/test-qrcode.jpg" style="width:100px;">
