--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a href="index.html" class="c900">首页</a>
     </li>
     <li>
-      <a href="loan.html">我要借款</a>
+      <a href="loan.html">我要融资</a>
     </li>
     <li class="sub">
       <a href="invest.html">我要投资</a>
