--- a/loan.html
+++ b/loan.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="keywords" content="川商贷">
         <meta http-equiv="description" content="川商贷">
-        <title>我要借款-金仓贷</title>
+        <title>我要融资-金仓贷</title>
 
         <link href="css/public.css" type="text/css" rel="stylesheet" />
         <link href="css/style.css" type="text/css" rel="stylesheet" />
@@ -35,7 +35,7 @@
                         <a href="index.html">首页</a>
                     </li>
                     <li>
-                        <a href="loan.html" class="c900">我要借款</a>
+                        <a href="loan.html" class="c900">我要融资</a>
                     </li>
                     <li class="sub">
                         <a href="invest.html">我要投资</a>
