--- a/account-fund.html
+++ b/account-fund.html
@@ -102,23 +102,64 @@
             <div id="right" class="bor">
                 <div class="p40 pt20">
 
-                    <h2 class="title"><span>借款项目管理</span><a href="account-rzxmsq.html"  class="fr c900 ft18" >立即申请借款</a></h2>
-                    <dl class="sxdl2 clearfix mt20"><dt>交易状态：</dt><dd class="clearfix"><a class="on">所有借款</a><a>审核中的借款</a><a>到期的借款</a><a>正常还款的借款</a></dd></dl>
+                    <h2 class="title"><span>融资项目管理</span><a href="account-fund-apply.html"  class="fr c900 ft18" >立即申请融资</a></h2>
 
-                    <div class="ft14 mt10">个人总借款金额:<span class="ce80">￥0.00</span>元</div>
+                    <div class="row state mt20 mb20">
+                        <div class="col-xs-10">
+                            <div class="row">
+                                <div class="col-xs-2">交易状态：</div>
+                                <div class="col-xs-9">
+                                    <a key="" name="status" class="on">所有融资</a>
+                                    <a key="1" name="status">审核中的融资</a>
+                                    <a key="2" name="status">到期的融资</a>
+                                    <a key="3" name="status">正常还款的融资</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-                    <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab2 mt10">
-                        <tr>
-                            <th class="pl15">借款流水号 </th>
-                            <th>名称</th>
-                            <th>借款时间</th>
-                            <th>到期时间</th>
-                            <th>交易金额（元）</th>
-                            <th>交易状态</th>
-                            <th>操作</th>
-                        </tr>
+                    <div class="ft14 mt10">个人总融资金额:<span class="ce80">￥0.00</span>元</div>
+
+                    <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tab2 mt5 max100 lhn">
+                        <tbody>
+                            <tr>
+                                <th width="10%">融资流水号 </th>
+                                <th width="25%">名称</th>
+                                <th width="13%">融资时间</th>
+                                <th width="13%">到期时间</th>
+                                <th width="15%">交易金额（元）</th>
+                                <th width="10%">交易状态</th>
+                                <th width="20%">操作</th>
+                            </tr>
+
+                            <tr>
+                                <td>201501120001</td>
+                                <td>买房！买房！买房！</td>
+                                <td>2015-01-12</td>
+                                <td>2016-01-12</td>
+                                <td>20,000.00</td>
+                                <td>已成功</td>
+                                <td><a href="account-phone-modify.html" class="png btn"><span class="png">查看</span></a></td>
+                            </tr><tr>
+                                <td>201501120001</td>
+                                <td>买房！买房！买房！</td>
+                                <td>2015-01-12</td>
+                                <td>2016-01-12</td>
+                                <td>20,000.00</td>
+                                <td>已成功</td>
+                                <td><a href="account-phone-modify.html" class="png btn"><span class="png">查看</span></a></td>
+                            </tr><tr>
+                                <td>201501120001</td>
+                                <td>买房！买房！买房！</td>
+                                <td>2015-01-12</td>
+                                <td>2016-01-12</td>
+                                <td>20,000.00</td>
+                                <td>已成功</td>
+                                <td><a href="account-phone-modify.html" class="png btn"><span class="png">查看</span></a></td>
+                            </tr>
+                        </tbody>
                     </table>
-                    <div class="tac bgf8 lh36 borb2">暂时没有借款记录</div>
+                    <div class="tac hidden bgf8 lh36 borb2">暂时没有融资记录</div>
 
                     <div class="tabpages mt10 tar c999"><span class="fr" style="margin-top:3px;"><input name="" type="text"  class="text fl c999"/><a class="go fl pr5">GO</a></span><span class="mr20">共 0 条记录 0 页</span>|<a class="ml20 c999">首页</a><a class="ml20 c999">上一页</a><a class="ml20 c999">下一页</a><a class="ml20 mr20 c999">尾页</a></div>
 
