--- a/invest.html
+++ b/invest.html
@@ -37,9 +37,10 @@
                     <li>
                         <a href="loan.html">我要融资</a>
                     </li>
-                    <li class="sub">
-                        <a href="invest.html" class="c900">我要投资</a>
+                    <li class="sub"><span class="sub-icon clearfix"></span>
+                        <a href="invest.html">我要投资</a>
                         <ul>
+                            <li class="sub-nav-icon"><span></span></li>
                             <li><a href="invest.html">散标投资</a></li>
                             <li><a href="transfer.html">债权转让</a></li>
                         </ul>
@@ -51,8 +52,9 @@
                         <a href="security.html">安全保障</a>
                     </li>
                     <li class="sub">
-                        <a href="company-intro.html">关于我们</a>
+                        <a href="company-intro.html">关于我们</a><span class="sub-icon clearfix"></span>
                         <ul>
+                            <li class="sub-nav-icon"><span></span></li>
                             <li><a href="company-intro.html">公司介绍</a></li>
                             <li><a href="product-intro.html">产品介绍</a></li>
                             <li><a href="qualification.html">企业资质</a></li>
