--- a/trade-financing.html
+++ b/trade-financing.html
@@ -35,35 +35,30 @@
                         <a href="index.html">首页</a>
                     </li>
                     <li>
-                        <a href="loan.html" class="c900">我要融资</a>
+                        <a href="loan.html">我要融资</a>
                     </li>
-                    <li class="sub">
-                        <a href="#">我要投资</a>
+                    <li class="sub"><span class="sub-icon clearfix"></span>
+                        <a href="invest.html">我要投资</a>
                         <ul>
-                            <li><a href="">我要投资</a></li>
-                            <li><a href="">散标投资</a></li>
+                            <li class="sub-nav-icon"><span></span></li>
+                            <li><a href="invest.html">散标投资</a></li>
+                            <li><a href="transfer.html">债权转让</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href="account.html">账户管理</a>
                     </li>
-                    <li class="sub">
-                        <a href="#">安全保障</a>
-                        <ul>
-                            <li><a href="">资金安全保障</a></li>
-                            <li><a href="">项目风险保障</a></li>
-                            <li><a href="">项目担保保障</a></li>
-                            <li><a href="">风险准备金垫付</a></li>
-                            <li><a href="">违约赔付有保障</a></li>
-                        </ul>
+                    <li>
+                        <a href="security.html">安全保障</a>
                     </li>
                     <li class="sub">
-                        <a href="#">关于我们</a>
+                        <a href="company-intro.html">关于我们</a><span class="sub-icon clearfix"></span>
                         <ul>
-                            <li><a href="">公司介绍</a></li>
-                            <li><a href="">产品介绍</a></li>
-                            <li><a href="">企业资质</a></li>
-                            <li><a href="">联系我们</a></li>
+                            <li class="sub-nav-icon"><span></span></li>
+                            <li><a href="company-intro.html">公司介绍</a></li>
+                            <li><a href="product-intro.html">产品介绍</a></li>
+                            <li><a href="qualification.html">企业资质</a></li>
+                            <li><a href="contact-us.html">联系我们</a></li>
                         </ul>
                     </li>
                 </ul>
