--- a/account-certify.html
+++ b/account-certify.html
@@ -35,24 +35,26 @@
                         <a href="index.html">首页</a>
                     </li>
                     <li>
-                        <a href="loan.html">我要借款</a>
+                        <a href="loan.html">我要融资</a>
                     </li>
-                    <li class="sub">
+                    <li class="sub"><span class="sub-icon clearfix"></span>
                         <a href="invest.html">我要投资</a>
                         <ul>
+                            <li class="sub-nav-icon"><span></span></li>
                             <li><a href="invest.html">散标投资</a></li>
                             <li><a href="transfer.html">债权转让</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="account.html" class="c900">账户管理</a>
+                        <a href="account.html">账户管理</a>
                     </li>
                     <li>
                         <a href="security.html">安全保障</a>
                     </li>
                     <li class="sub">
-                        <a href="company-intro.html">关于我们</a>
+                        <a href="company-intro.html">关于我们</a><span class="sub-icon clearfix"></span>
                         <ul>
+                            <li class="sub-nav-icon"><span></span></li>
                             <li><a href="company-intro.html">公司介绍</a></li>
                             <li><a href="product-intro.html">产品介绍</a></li>
                             <li><a href="qualification.html">企业资质</a></li>
