--- a/index.html
+++ b/index.html
@@ -28,40 +28,42 @@
 </div>
 
 <div class="header">
-<div class="w1100 mc">
-  <a href="index.html" class="logo"><img src="images/logo.png" /></a>
-  <ul class="nav">
-    <li>
-      <a href="index.html" class="c900">首页</a>
-    </li>
-    <li>
-      <a href="loan.html">我要融资</a>
-    </li>
-    <li class="sub">
-      <a href="invest.html">我要投资</a>
-      <ul>
-        <li><a href="invest.html">散标投资</a></li>
-        <li><a href="transfer.html">债权转让</a></li>
-      </ul>
-    </li>
-    <li>
-      <a href="account.html">账户管理</a>
-    </li>
-    <li>
-      <a href="security.html">安全保障</a>
-    </li>
-    <li class="sub">
-      <a href="company-intro.html">关于我们</a>
-      <ul>
-        <li><a href="company-intro.html">公司介绍</a></li>
-        <li><a href="product-intro.html">产品介绍</a></li>
-        <li><a href="qualification.html">企业资质</a></li>
-        <li><a href="contact-us.html">联系我们</a></li>
-      </ul>
-    </li>
-  </ul>
-</div>
-</div>
+            <div class="w1100 mc">
+                <a href="index.html" class="logo"><img src="images/logo.png" /></a>
+                <ul class="nav">
+                    <li>
+                        <a href="index.html">首页</a>
+                    </li>
+                    <li>
+                        <a href="loan.html">我要融资</a>
+                    </li>
+                    <li class="sub"><span class="sub-icon clearfix"></span>
+                        <a href="invest.html">我要投资</a>
+                        <ul>
+                            <li class="sub-nav-icon"><span></span></li>
+                            <li><a href="invest.html">散标投资</a></li>
+                            <li><a href="transfer.html">债权转让</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="account.html">账户管理</a>
+                    </li>
+                    <li>
+                        <a href="security.html">安全保障</a>
+                    </li>
+                    <li class="sub">
+                        <a href="company-intro.html">关于我们</a><span class="sub-icon clearfix"></span>
+                        <ul>
+                            <li class="sub-nav-icon"><span></span></li>
+                            <li><a href="company-intro.html">公司介绍</a></li>
+                            <li><a href="product-intro.html">产品介绍</a></li>
+                            <li><a href="qualification.html">企业资质</a></li>
+                            <li><a href="contact-us.html">联系我们</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
 <div class="banner">
   <div class="login_layer">
