--- a/register.html
+++ b/register.html
@@ -27,7 +27,38 @@
         <div class="header">
             <div class="w1100 mc">
                 <a href="index.html" class="logo"><img src="images/logo.png" /></a>
-                <h1 class="fl c999 lh36" style=" margin-left:120px; padding-left:20px; margin-top:15px; border-left:1px solid #d8d8d8">注册</h1>
+                <ul class="nav">
+                    <li>
+                        <a href="index.html">首页</a>
+                    </li>
+                    <li>
+                        <a href="loan.html">我要融资</a>
+                    </li>
+                    <li class="sub"><span class="sub-icon clearfix"></span>
+                        <a href="invest.html">我要投资</a>
+                        <ul>
+                            <li class="sub-nav-icon"><span></span></li>
+                            <li><a href="invest.html">散标投资</a></li>
+                            <li><a href="transfer.html">债权转让</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="account.html">账户管理</a>
+                    </li>
+                    <li>
+                        <a href="security.html">安全保障</a>
+                    </li>
+                    <li class="sub">
+                        <a href="company-intro.html">关于我们</a><span class="sub-icon clearfix"></span>
+                        <ul>
+                            <li class="sub-nav-icon"><span></span></li>
+                            <li><a href="company-intro.html">公司介绍</a></li>
+                            <li><a href="product-intro.html">产品介绍</a></li>
+                            <li><a href="qualification.html">企业资质</a></li>
+                            <li><a href="contact-us.html">联系我们</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
 
