--- a/account-to-bank.html
+++ b/account-to-bank.html
@@ -123,10 +123,10 @@
                         </table> 
                         <div class="tac mt20 hidden">您还未设置默认银行账号，不能使用快捷充值。</div>
                         <div class="tac mt20">
-                            <input onclick="" type="button" value="快捷转出"><span class="pl10"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">快捷转出</span></a>快捷转出，收费标准，及转出限额请参照《快捷转出说明》</span>
+                            <input onclick="" type="button" class="btn" value="快捷转出"><span class="pl10">快捷转出，收费标准，及转出限额请参照《快捷转出说明》</span>
                         </div>
-                        <div class="tac">
-                            <input onclick="" type="button" value="网银转出"><span class="pl10"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">网银转出</span></a>网银转出，收费标准，及转出限额请参照《网银转出说明》</span>
+                        <div class="tac mt10">
+                            <input onclick="" type="button" class="btn" value="网银转出"><span class="pl10">网银转出，收费标准，及转出限额请参照《网银转出说明》</span>
                         </div>
                         <div class="errors"><span id="EEE"></span> </div>
                     </div>
