--- a/security.html
+++ b/security.html
@@ -54,11 +54,7 @@
                     <li class="sub">
                         <a href="company-intro.html">关于我们</a><span class="sub-icon clearfix"></span>
                         <ul>
-                            <li class="sub-nav-icon"><span></span></li>
-                            <li><a href="company-intro.html">公司介绍</a></li>
-                            <li><a href="product-intro.html">产品介绍</a></li>
-                            <li><a href="qualification.html">企业资质</a></li>
-                            <li><a href="contact-us.html">联系我们</a></li>
+                            <li class="sub-nav-icon"><span></span></li><li><a href="company-intro.html">公司介绍</a></li><li><a href="product-intro.html">产品介绍</a></li><li><a href="qualification.html">企业资质</a></li><li><a href="contact-us.html">联系我们</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -105,6 +101,7 @@
                 <div style="width:20%" class="tar fl">
                     <img src="images/test-qrcode.jpg" style="width:100px;">
                 </div>
+                <div class="clear-col"></div>
                 <div class="tac p20">版权所有 © 重庆骐特·金仓贷 渝ICP备00000000号</div>
                 <div class="clearfix"></div>
             </div>
