--- a/transfer.html
+++ b/transfer.html
@@ -109,7 +109,7 @@
                 </div>
 
 
-                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20">
+                <table width="100%" border="0" cellspacing="0" cellpadding="0" class="tz_tab mt20 mb20">
                     <tr>
                         <th scope="col" width="20%">借款标题</th>
                         <th scope="col">信用等级</th>
@@ -124,7 +124,7 @@
 
                     <tr class="ft12">
                         <td scope="col" width="20%">借款标题</td>
-                        <td scope="col"><span class="rank">A</span></td>
+                        <td scope="col"><span class="rank rank-green">A</span></td>
                         <td scope="col"><span class="ft18">11.00</span>%</td>
                         <td scope="col"><span class="ft18">15</span>个月</td>
                         <td scope="col"><span class="ft18">42.24</span>元</td>
@@ -134,7 +134,7 @@
                         <td scope="col"><a class="tzbtn">购买</a></td>
                     </tr><tr class="ft12">
                     <td scope="col" width="20%">借款标题</td>
-                    <td scope="col"><span class="rank">A</span></td>
+                    <td scope="col"><span class="rank rank-green">A</span></td>
                     <td scope="col"><span class="ft18">11.00</span>%</td>
                     <td scope="col"><span class="ft18">15</span>个月</td>
                     <td scope="col"><span class="ft18">42.24</span>元</td>
@@ -144,7 +144,7 @@
                     <td scope="col"><a class="tzbtn">购买</a></td>
                     </tr><tr class="ft12">
                     <td scope="col" width="20%">借款标题</td>
-                    <td scope="col"><span class="rank">A</span></td>
+                    <td scope="col"><span class="rank rank-green">A</span></td>
                     <td scope="col"><span class="ft18">11.00</span>%</td>
                     <td scope="col"><span class="ft18">15</span>个月</td>
                     <td scope="col"><span class="ft18">42.24</span>元</td>
