--- a/account-bank-to.html
+++ b/account-bank-to.html
@@ -123,11 +123,11 @@
                             </tbody>
                         </table> 
                         <div class="tac mt20 hidden">您还未设置默认银行账号，不能使用快捷充值。</div>
-                        <div class="tac mt20">
-                            <input onclick="" type="button" value="快捷充值"><span class="pl10"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">快捷充值</span></a>快捷充值，收费标准，及充值限额请参照《快捷充值说明》</span>
+                        <div class="tac mt20 mb10">
+                            <input onclick="" type="button" class="btn" value="快捷充值"><span class="pl10">快捷充值，收费标准，及充值限额请参照《快捷充值说明》</span>
                         </div>
                         <div class="tac">
-                            <input onclick="" type="button" value="网银充值"><span class="pl10"><a id="depositUrl" href="#" target="_blank" style="display: none;"><span id="spandepositUrl">网银充值</span></a>网银充值，收费标准，及充值限额请参照《网银充值说明》</span>
+                            <input onclick="" type="button" class="btn" value="网银充值"><span class="pl10">网银充值，收费标准，及充值限额请参照《网银充值说明》</span>
                         </div>
                         <div class="errors"><span id="EEE"></span> </div>
                     </div>
