--- a/account-income-info.html
+++ b/account-income-info.html
@@ -151,7 +151,7 @@
                     <div class="ur-invest-info">
                         
                         <div class="row mt30">
-                            <h4 class="pl10 mb10"><span class="pl5">投资统计</span><span class="ft12 pl10 cred">(不含当日)</span></h4>
+                            <h4 class="mb10">投资统计<span class="ft12 pl10 cred">(不含当日)</span></h4>
                             <div class="col-xs-6">
                                 <div class="row">
                                     <div class="col-xs-4">累计投资金额：</div>
